--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "clikxo-studio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Performance Digital Marketing Agency Website",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "audit": "npm audit --audit-level high"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -72,12 +76,22 @@
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
+    "axe-core": "^4.11.0",
+    "axios": "^1.13.2",
+    "chalk": "^5.6.2",
+    "cypress": "^15.6.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "jest": "^30.2.0",
+    "lighthouse": "^13.0.1",
     "lovable-tagger": "^1.1.11",
+    "ora": "^9.0.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prompts": "^2.4.2",
+    "react-testing-library": "^8.0.1",
     "tailwindcss": "^3.4.17",
     "terser": "^5.44.1",
     "typescript": "^5.8.3",
